--- a/Css/HotelStyle.css
+++ b/Css/HotelStyle.css
@@ -3,26 +3,37 @@
     padding: 0;
 }
 body {
-    background: url("../Imagens/Fundo-Home.jpg") no-repeat;
+    background: url("../Imagens/Background-Hotel.png") no-repeat;
     background-size: 100vw 100vh;
     width: 100%;
     height: 100%;
     align-self: center;
 }
 
-#top{
-    background-color: white;
-    width: 100%;
-    font-style: italic;
+.navbar {
+    background:rgb(0, 0, 0,0.541);   
+    font-family: "Sofia"; color: white;
     text-align: center;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: large;
+ }
+
+ a#btnLogin {
+    color: rgb(175, 128, 10);
+    text-decoration: none;
+    border: 2px solid rgb(175, 128, 10);
+    padding: 0.3% 2%;
+    font-size: 2rem;
 }
 
-#missao{
-    background-color: white;
+a:hover#btnLogin {
+    background-color: rgb(175, 128, 10);
+    color: white;
+    transition: 1s;
 }
 
-#img_missao{
-    background-image: url("../Imagens/Imagem-Missao.png"); 
-    
+#cont {
+    background-color: rgba(0, 0, 0, 0.541);
+    color: white;
+    font-family: "Cormorant Garamond";
+    font-size: 40px;
 }
