--- a/Css/StylePedido.css
+++ b/Css/StylePedido.css
@@ -1,7 +1,41 @@
-#btnReservar {
-    color: black;
+*{
+    margin: 0;
+    padding: 0;
+}
+body {
+    background: url("../Imagens/Pedido_Fundo.png") no-repeat;
+    background-size: 100vw 100vh;
+    width: 100%;
+    height: 100%;
+    align-self: center;
+}
+
+#cont {
+    background-color: rgba(243, 242, 240, 0.54);
+}
+
+#texto{
+    font-family: "Cormorant Garamond";
+    font-size: 25px;
+    font-weight:bold;
+}
+.btnPedido{
     text-decoration: none;
     border: 2px solid #a9a9a9;
-    padding: 0.5% 9%;
-    font-size: 1rem;  
+    padding: 1% 15%;
+    font-size: 1.2rem;  
+    background-color: transparent;
+    color: black;
+    margin-top: 30px;
 }
+.btnPedido:hover {
+    text-decoration: none;
+    border: 2px solid #a9a9a9;
+    padding: 1% 15%; 
+    background-color: #a9a9a9;
+    color:black;
+    transition: 1s;
+    cursor: pointer;
+    font-weight:bold;
+}
+
