--- a/Css/StylePedido.css
+++ b/Css/StylePedido.css
@@ -31,7 +31,7 @@ body {
     font-size: 1.2rem;  
     background-color: transparent;
     color: black;
-    margin-top: 30px;
+    
 }
 .btnPedido:hover {
     text-decoration: none;
@@ -43,4 +43,13 @@ body {
     cursor: pointer;
     font-weight:bold;
 }
+@media (max-width: 575.98px) {
+    div #cont{
+        font-size: 5px;
+    }
+}
+
+@media (max-width: 767.98px) { div #cont{
+    font-size: 5px;
+}}
 
